[gd_scene load_steps=2 format=3 uid="uid://di4jhb0pn5x6u"]

[ext_resource type="Script" uid="uid://bgup0xy7ulrlb" path="res://scenes/dead_menu.gd" id="1_mp3x5"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_mp3x5")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ReplayMenuDead" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainMenuMenuDead" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitDead" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
